// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add a feature 1`] = `
Object {
  "addFeature": Object {
    "__typename": "Feature",
    "id": Any<String>,
    "rating": 1,
    "releaseYear": "2021",
    "rewatch": false,
    "shelf": Object {
      "__typename": "FeatureShelf",
      "name": "Watched",
    },
    "title": "Test Feature",
  },
}
`;

exports[`can fetch second page of features 1`] = `
Object {
  "features": Object {
    "__typename": "FeaturePage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Feature",
        "title": "Lost in Translation",
      },
    ],
    "nextPageCursor": Any<String>,
  },
}
`;

exports[`can fetch second page of features 2`] = `
Object {
  "features": Object {
    "__typename": "FeaturePage",
    "hasNextPage": false,
    "items": Array [
      Object {
        "__typename": "Feature",
        "title": "Test Feature",
      },
    ],
    "nextPageCursor": null,
  },
}
`;

exports[`can import external feature 1`] = `
Object {
  "importExternalFeature": Object {
    "__typename": "Feature",
    "externalId": "imdb:tt0335266",
    "id": Any<String>,
    "releaseYear": "2003",
    "rewatch": false,
    "shelf": Object {
      "__typename": "FeatureShelf",
      "id": "Watched",
    },
    "title": "Lost in Translation",
  },
}
`;

exports[`can mutate title on feature without change to other fields 1`] = `
Object {
  "updateFeature": Object {
    "__typename": "Feature",
    "externalId": null,
    "image": null,
    "notes": null,
    "rating": 1,
    "releaseYear": "2021",
    "title": "Test Feature 2",
  },
}
`;

exports[`can query single feature 1`] = `
Object {
  "feature": Object {
    "__typename": "Feature",
    "id": Any<String>,
    "rating": 1,
    "releaseYear": "2021",
    "rewatch": false,
    "shelf": Object {
      "__typename": "FeatureShelf",
      "id": "Watched",
      "name": "Watched",
    },
    "title": "Test Feature",
  },
}
`;

exports[`can search for external features 1`] = `
Object {
  "__typename": "ExternalFeature",
  "id": StringMatching /\\^tmdb:/,
  "title": Any<String>,
}
`;

exports[`can search for external features 2`] = `
Object {
  "__typename": "ExternalFeature",
  "id": StringMatching /\\^tmdb:/,
  "title": Any<String>,
}
`;

exports[`can search for external features 3`] = `
Object {
  "__typename": "ExternalFeature",
  "id": StringMatching /\\^tmdb:/,
  "title": Any<String>,
}
`;

exports[`can search for external features 4`] = `
Object {
  "__typename": "ExternalFeature",
  "id": StringMatching /\\^tmdb:/,
  "title": Any<String>,
}
`;

exports[`can search for external features 5`] = `
Object {
  "__typename": "ExternalFeature",
  "id": StringMatching /\\^tmdb:/,
  "title": Any<String>,
}
`;

exports[`can search for external features 6`] = `
Object {
  "__typename": "ExternalFeature",
  "id": StringMatching /\\^tmdb:/,
  "title": Any<String>,
}
`;
